<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@+id/edPassword"
        android:hint="@string/enterEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        />
    <EditText
        android:id="@+id/edPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@+id/btnLogin"
        android:hint="@string/enterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"
        />
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:text="@string/cont"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:onClick="goToCityList"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-thin"
        />
    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContinue"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:onClick="goToRegistration"
        android:fontFamily="sans-serif-thin"
        />
</RelativeLayout>