<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    tools:context=".Registration">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:onClick="goToLogin"
            />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:fontFamily="casual"
            android:textColor="@color/white"
            />


    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/edName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enterName"
        android:fontFamily="sans-serif-thin"
        android:inputType="text" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif-thin"

        />

    <EditText
        android:id="@+id/edPhoneNumber"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/enterphonenumber"
        android:inputType="phone"
        android:fontFamily="sans-serif-thin"
        />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:fontFamily="sans-serif-thin"
        />

    <EditText
        android:id="@+id/edConfPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/edPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-thin"

        android:hint="@string/confirmpassword"
        android:inputType="textPassword"

        />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="sans-serif-thin"

        android:layout_alignParentBottom="true"
        android:onClick="registration"
        />


</RelativeLayout>